@@ -18,6 +18,7 @@ pathsearch.*			author - Colin Watson
 pipeline.*			author - James Clark, Colin Watson
 security.*			author - John W. Eaton, Wilf., Colin Watson
 tempfile.c			author - Colin Watson
+util.c				author - John W. Eaton, Wilf., Colin Watson
 waitpid.c			author - Carl Edman
 wordfnmatch.*			author - Colin Watson
 xregcomp.*			author - Colin Watson
